--- a/views/signup.pug
+++ b/views/signup.pug
@@ -37,5 +37,5 @@ head
     .text
       h3
         | Already have an account? 
-        a(href='/logins') Login now
+        a(href='/login') Login now
 script(src='/js/validation.js')
