--- a/public/css/login.css
+++ b/public/css/login.css
@@ -56,10 +56,10 @@
     font-size: 16px;
     transition: all 0.3s ease;
   }
-  form .row input:focus{
-    border-color:   #4070f4;
-    box-shadow: inset 0px 0px 2px 2px   #4070f4;
-  }
+  /* form .row input:focus{ */
+    /* border-color:   #4070f4; */
+    /* box-shadow: inset 0px 0px 2px 2px   #4070f4; */
+  /* } */
   form .row input::placeholder{
     color: #999;
   }
