--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -3,14 +3,13 @@ body{
     width: 50%;
     padding: 20px;
     margin-bottom: 30px;
-    background-color: rgba(0,0,0,0.15);
+    background-color: whitesmoke;
   }
 
    .ka-container{
         max-width: 700px;
         width: 100%;
         background-color: #fff;
-        /* padding: 25px 30px; */
         border-radius: 5px;
         box-shadow: 0 5px 10px rgba(0,0,0,0.15)
   } 
