--- a/views/registration.pug
+++ b/views/registration.pug
@@ -49,7 +49,7 @@ head
         option(value='4000') 4,000Ugx
         option(value='3000') 3,000Ugx
         option(value='2000') 2,000Ugx
-        option(value='1000U') 1,000Ugx
+        option(value='1000') 1,000Ugx
         option(value='0') 0,00Ugx
     .col-md-6
       label.form-label(for='inputTime') Vehicle Model
