--- a/views/signoff.pug
+++ b/views/signoff.pug
@@ -22,7 +22,7 @@ head
     .col-md-6
       label.form-label(for='inputFor') Vehicle Type
       select#inputFor.form-select(type='text' name='vehicletype')
-        option(selected='') choose Vehicle type
+        option(value='Default' selected='') choose Vehicle type
         option(value='Personal car') Personal car
         option(value='Taxi') Taxi
         option(value='Boda Boda') Boda Boda
@@ -40,7 +40,7 @@ head
     .col-md-6
       label.form-label(for='inputGender') Gender
       select#inputGender.form-select(type='text' name='gender')
-        option(selected='') Choose Gender
+        option(value='Default' selected='') Choose Gender
         option(value='Female') Female
         option(value='Male') Male
         option(value='Other') Other
