--- a/views/report.pug
+++ b/views/report.pug
@@ -12,7 +12,7 @@ head
     .box-8
       .content-box
         p
-          | Customer Details
+          | PARKVILLE REPORTS
           button.namu(onclick='window.print()') Print Report
           a(href='/dashboard')
                     button.namugga(title='Back to Dashboard')
