--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -17,7 +17,7 @@ head
     |  Client Sign Off 
   a.icon-a(href='/report')
     i.fa.fa-list-alt.icons
-    |  Reports
+    |  Parkville Reports
   #logout.div
     a.icon-a(href='/logout')
       i.fa.fa-power-off(aria-hidden='true')
