--- a/views/registration.pug
+++ b/views/registration.pug
@@ -5,45 +5,53 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   link(rel='stylesheet' href='/bootstrap-5.1.3-dist/css/bootstrap.css')
   link(rel='stylesheet' href='/css/registration.css')
-  title Client Registration
+  title Client Registration Form
 .ka-container
   .title
     span Client Registration Form
-  form#form.row.g-3(name='clientRegistration' method='POST' action='/registration')
+  form#form.row.g-3(name='clientRegistration' method='POST' action='/registration' onsubmit='return regValidation();')
     .col-md-6
       label.form-label(for='inputname') Full Name
-      input#inputFullname.form-control(type='text' name='fullname')
+      input#fullname.form-control(type='text' name='fullname')
+      small#fullnameError
     .col-6
       label.form-label(for='inputcontact') Phone Number
-      input#inputContact.form-control(type='text' name='phonenumber')
+      input#phonenumber.form-control(type='text' name='phonenumber')
+      small#phonenumberError
     .col-6
       label.form-label(for='inputniN') NIN
-      input#inputniN.form-control(type='text' name='nin')
+      input#nin.form-control(type='text' name='nin')
+      small#ninError
     .col-md-6
-      label.form-label(for='inputnumberPlate') Number Plate
-      input#inputnumberPlate.form-control(type='text' name='numberplate')
+      label.form-label(for='inputnumberPlate')
+        | Number
+        | Plate
+      input#numberplate.form-control(type='text' name='numberplate')
+      small#numberplateError
     .col-md-6
       label.form-label(for='inputFor') Vehicle Type
-      select#inputFor.form-select(type='text' name='vehicletype')
+      select#vehicletype.form-select(type='text' name='vehicletype')
         option(value='Default' selected='') Choose Vehicle type
         option(value='Personal car') Personal car
         option(value='Taxi') Taxi
         option(value='Boda Boda') Boda Boda
         option(value='Coaster') Coaster
         option(value='Truck') Truck
+      small#vehicletypeError
     .col-md-6
       label.form-label(for='inputService') Service
-      select#inputService.form-select(type='text' name='service')
+      select#service.form-select(type='text' name='service')
         option(value='Default' selected='') Choose Client Service
         option(value='Parking') Parking
         option(value='Battery Hire') Battery Hire
         option(value='Puncture Fix') Puncture Fix
         option(value='Tyre Pressure') Tyre Pressure
         option(value='Valves') Valves
+      small#serviceError
     .col-md-6
       label.form-label(for='inputPrice') Parking Fee
-      select#inputPrice.form-select(type='number' name='servicefee')
-        option(value='Default' selected='') Select '0' if not required
+      select#servicefee.form-select(type='number' name='servicefee')
+        option(value='Default' selected='') Select &apos;0&apos; if not required
         option(value='10000') 10,000Ugx
         option(value='5000') 5,000Ugx
         option(value='4000') 4,000Ugx
@@ -51,59 +59,70 @@ head
         option(value='2000') 2,000Ugx
         option(value='1000') 1,000Ugx
         option(value='0') 0,00Ugx
+      small#servicefeeError
     .col-md-6
       label.form-label(for='inputTime') Vehicle Model
-      input#inputmodel.form-control(type='text' name='vehiclemodel')
+      input#vehiclemodel.form-control(type='text' name='vehiclemodel')
+      small#vehiclemodelError
     .col-md-6
       label.form-label(for='inputTime') Colour
-      input#inputcolour.form-control(type='text' name='colour')
+      input#colour.form-control(type='text' name='colour')
+      small#colourError
     .col-md-6
       label.form-label(for='inputDate') Date
-      input#inputdate.form-control(type='date' name='date')
+      input#date.form-control(type='date' name='date')
+      small#dateError
     .col-md-6
       label.form-label(for='inputTime') Time Of Arrival
-      input#inputtime.form-control(type='time' name='arrivaltime')
+      input#time.form-control(type='time' name='arrivaltime')
+      small#timeError
     .col-md-6
       label.form-label(for='inputGender') Gender
-      select#inputGender.form-select(type='text' name='gender')
+      select#gender.form-select(type='text' name='gender')
         option(value='Default' selected='') Choose Gender
         option(value='Female') Female
         option(value='Male') Male
         option(value='Other') Other
+      small#genderError
     .col-md-6
       label.form-label(for='inputTime') Battery Price
-      select#inputPrice.form-select(type='number' name='batteryprice')
-        option(value='Default' selected='') Select '0' if not required
+      select#batteryprice.form-select(type='number' name='batteryprice')
+        option(value='Default' selected='') Select &apos;0&apos; if not required
         option(value='10000') 10,000Ugx
         option(value='5000') 5,000Ugx
         option(value='4000') 4,000Ugx
         option(value='3000') 3,000Ugx
         option(value='0') 0,00Ugx
+      small#batterypriceError
     .col-md-6
       label.form-label(for='inputDuration') Battery Size
-      select#inputDuration.form-select(type='text' name='batterysize')
+      select#batterysize.form-select(type='text' name='batterysize')
         option(value='Default' selected='') Choose Battery Size
         option(value='Small') Small
         option(value='Medium') Medium
         option(value='Large') Large
         option(value='X-Large') X-Large
         option(value='Non-applicable') Non-applicable
+      small#batterysizeError
     .col-md-6
       label.form-label(for='inputTime') Tyre Price
-      select#inputPrice.form-select(type='number' name='tyreprice')
-        option(value='Default' selected='') Select '0' if not required
+      select#tyreprice.form-select(type='number' name='tyreprice')
+        option(value='Default' selected='') Select &apos;0&apos; if not required
         option(value='5000') 5,000Ugx
         option(value='500') 500Ugx
         option(value='0') 0,00Ugx
+      small#tyrepriceError
     .col-md-6
       label.form-label(for='inputTime') Tyre Size
-      select#inputDuration.form-select(type='text' name='tyresize')
+      select#tyresize.form-select(type='text' name='tyresize')
         option(value='Default' selected='') Choose Tyre Size
         option(value='Small') Small
         option(value='Medium') Medium
         option(value='Large') Large
         option(value='X-Large') X-Large
         option(value='Non-applicable') Non-applicable
+      small#tyresizeError
     .col-12
       button.btn.btn-primary(type='submit' value='Submit' name='') Register Client 
-link(rel='stylesheet' href='/bootstrap-5.1.3-dist/js/bootstrap.js')
+script(src='/bootstrap-5.1.3-dist/js/bootstrap.js')
+script(src='/js/val.js')
