--- a/views/signoff.pug
+++ b/views/signoff.pug
@@ -5,45 +5,53 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   link(rel='stylesheet' href='/bootstrap-5.1.3-dist/css/bootstrap.css')
   link(rel='stylesheet' href='/css/registration.css')
-  title Client Sign Off 
+  title Document
 .ka-container
   .title
     span Client SignOff Form
-  form#form.row.g-3(name='clientRegistration' method='POST' action='/signoff')
+  form#form.row.g-3(name='clientRegistration' method='POST' action='/signoff' onsubmit='return signOffVal();')
     .col-md-6
       label.form-label(for='inputname') Full Name
-      input#inputFullname.form-control(type='text' name='fullname')
+      input#fullname.form-control(type='text' name='fullname')
+      small#fullnameError
     .col-6
       label.form-label(for='inputcontact') Phone Number
-      input#inputContact.form-control(type='text' name='phonenumber')
+      input#phonenumber.form-control(type='text' name='phonenumber')
+      small#phonenumberError
     .col-6
       label.form-label(for='inputniN') NIN
-      input#inputniN.form-control(type='text' name='nin')
+      input#nin.form-control(type='text' name='nin')
+      small#ninError
     .col-md-6
       label.form-label(for='inputFor') Vehicle Type
-      select#inputFor.form-select(type='text' name='vehicletype')
+      select#vehicletype.form-select(type='text' name='vehicletype')
         option(value='Default' selected='') choose Vehicle type
         option(value='Personal car') Personal car
         option(value='Taxi') Taxi
         option(value='Boda Boda') Boda Boda
         option(value='Coaster') Coaster
         option(value='Truck') Truck
+      small#vehicletypeError
     .col-md-6
       label.form-label(for='inputDate') Date
-      input#inputdate.form-control(type='date' name='date')
+      input#date.form-control(type='date' name='date')
+      small#dateError
     .col-md-6
       label.form-label(for='inputDate') Receipt Number
-      input#inputdate.form-control(type='number' name='receiptnumber')
+      input#receipt.form-control(type='number' name='receiptnumber')
+      small#receiptnumberError
     .col-md-6
       label.form-label(for='inputTime') Time 
-      input#inputtime.form-control(type='time' name='time')
+      input#time.form-control(type='time' name='time')
+      small#timeError
     .col-md-6
       label.form-label(for='inputGender') Gender
-      select#inputGender.form-select(type='text' name='gender')
+      select#gender.form-select(type='text' name='gender')
         option(value='Default' selected='') Choose Gender
         option(value='Female') Female
         option(value='Male') Male
         option(value='Other') Other
-
-      button.btn.btn-primary(type='submit' value='Submit' name='') Sign Off Client 
-link(rel='stylesheet' href='/bootstrap-5.1.3-dist/js/bootstrap.js')
+      small#genderError
+    button.btn.btn-primary(type='submit' value='Submit' name='') Sign Off Client 
+script(src='/bootstrap-5.1.3-dist/js/bootstrap.js')
+script(src='/js/signoffval.js')
