--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -42,12 +42,12 @@ head
   .col-div-4-1
     .box
       p.head-1 Tyres
-      //- p #{new Intl.NumberFormat().format(total.totalTyrePrice)}Ugx 
+      p #{new Intl.NumberFormat().format(total.totalTyrePrice)}Ugx 
       i.fa.fa-life-ring.box-icon
   .col-div-4-1
     .box
       p.head-1 Battery
-      //- p #{new Intl.NumberFormat().format(total.totalBatteryPrice)}Ugx 
+      p #{new Intl.NumberFormat().format(total.totalBatteryPrice)}Ugx 
 
       i.fa.fa-plus-square.box-icon
   .clearfix
