--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -66,7 +66,7 @@ head
           span 12/04/2022
           
         div
-          span#money UGX 50,000  
+          span#money UGX  
   .clearfix
   br
   // My table
